--- a/SnakeGame.html
+++ b/SnakeGame.html
@@ -2,10 +2,30 @@
 <html>
 <head>
 	<title>Snake Game!</title>
-	<style>
+	<style type="text/css">
+
 		canvas{
+			border: 3px solid white;
 			background-color: black;
+			position: absolute;
+			top: 100px;
 		}
+		body{
+			margin:0; 
+			padding: 0;
+			background: hsl(0, 100%, 100%);
+			display: flex; 
+			justify-content: center; 
+			align-items: center;
+		}
+		p{
+			font-family: segoe ui;
+			font-size: 3 em; 
+			color: #fff; 
+			position: absolute; 
+			top: 20px;
+		}
+
 	</style>
 </head>
 <body>
@@ -14,12 +34,12 @@
 		
 const canvas = document.getElementById('canvas');
 const ctx = canvas.getContext('2d');
-const box = 25; //box = snake
-const canvasSize = 23; //canvas is 20 boxes wide
+const box = 25; 
+const canvasSize = 23; //canvas is 23 boxes wide
 
 
 //score variable
-let score = 0;  //"Score : " +
+let score = 0;  
 
 
 
@@ -112,8 +132,8 @@ function draw(){
 		} else g = 100;
 
 		food = {
-			x: Math.floor(1 + (Math.random() * (canvasSize - 1))) * box,
-			y: Math.floor(1 + (Math.random() * (canvasSize - 1))) * box 
+			x: Math.floor(1 + (Math.random() * (canvasSize - 2))) * box,
+			y: Math.floor(1 + (Math.random() * (canvasSize - 2))) * box 
 		}
 	}
 	else
@@ -150,9 +170,9 @@ function draw(){
 	}
 	//game over
 	if(snakeX < box || snakeY < box || 
-		snakeX > ((canvasSize - 1) * box)|| snakeY > ((canvasSize - 1) * box)) //||collision(newHead,snake))
+		snakeX > ((canvasSize ) * box)|| snakeY > ((canvasSize ) * box)) //||collision(newHead,snake))
 	{
-		//alert(Game-Over);
+		alert('Game Over');
 		clearInterval(game);
 	}
 
@@ -163,13 +183,13 @@ function draw(){
 
 	//draw score
 	ctx.fillStyle = 'white';
-	ctx.font = '22px Changa one';
+	ctx.font = '24px Changa one';
 	ctx.clearRect(0, 0, 50, 25);
 	ctx.fillText(score, box, 0.8 * box);
 
 
 }
-let g = 500;
+let g = 300;
 let game = setInterval(draw, g);
 	</script>
 </body>
